--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
     "jest": "^27.5.1",
     "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.2"
-  },
-  "dependencies": {
+    "typescript": "^4.6.2",
     "@types/lodash": "^4.14.179",
     "@types/nodemailer": "^6.4.4",
-    "@types/nodemailer-smtp-transport": "^2.7.5",
+    "@types/nodemailer-smtp-transport": "^2.7.5"
+  },
+  "dependencies": {
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
