fix: adds dir to trigger github workflows

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,19 +1,13 @@
-module.exports = {
-  "env": {
-    "browser": true,
-    "commonjs": true,
-    "es2021": true
-  },
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended"
-  ],
+{
+  "root": true,
   "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": "latest"
-  },
   "plugins": [
     "@typescript-eslint"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
     "indent": [
@@ -33,4 +27,4 @@ module.exports = {
       "always"
     ]
   }
-};
+}
