--- a/.github/workflows/presubmit.yaml
+++ b/.github/workflows/presubmit.yaml
@@ -7,6 +7,22 @@ on:
   push:
 
 jobs:
+  run-eslint:
+    name: Run eslint
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Run eslint
+      run: npm run lint
+
   run-unit-tests:
     name: Run unit tests
     runs-on: ubuntu-latest
