--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     }
   },
   "scripts": {
-    "build": "rm -rf dist/ && rm -rf commonjs/ && tsc --project tsconfig.json && tsc --project tsconfig.commonjs.json && echo '{\"type\": \"commonjs\"}' > commonjs/package.json",
-    "start": "tsc & node .",
-    "dev": "tsc -w & node .",
+    "build": "tsc --project tsconfig.json && tsc --project tsconfig.commonjs.json && echo '{\"type\": \"commonjs\"}' > commonjs/package.json",
     "test": "jest",
     "migrate": "node-pg-migrate -t pgmigrations_identity",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
   },
   "repository": {
     "type": "git",
@@ -36,16 +36,18 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/lodash": "^4.14.179",
     "@types/node": "^17.0.21",
+    "@types/nodemailer": "^6.4.4",
+    "@types/nodemailer-smtp-transport": "^2.7.5",
     "@types/pg": "^8.6.4",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.10.0",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.2",
-    "@types/lodash": "^4.14.179",
-    "@types/nodemailer": "^6.4.4",
-    "@types/nodemailer-smtp-transport": "^2.7.5"
+    "typescript": "^4.6.2"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
