--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,19 @@
 {
   "compilerOptions": {
-      "target": "ES2016", 
-      "module": "ES6",
-      "resolveJsonModule": true,
-      "sourceMap": true,
-      "outDir": "./dist",
-      "strict": true,
-      "noUnusedLocals": true,
-      "moduleResolution": "node",
-      "baseUrl": "./src",                     
-      "esModuleInterop": true,
-      "typeRoots": [
-        "@types",
-        "./node_modules/@types",
-      ],
-      "declaration": true,  
+    "target": "ES6", 
+    "module": "ES6", 
+    "resolveJsonModule": true,
+    "sourceMap": true, 
+    "outDir": "./dist", 
+    "strict": true, 
+    "noUnusedLocals": false,
+    "moduleResolution": "node",
+    "baseUrl": "./src",
+    "esModuleInterop": true,
+    "declaration": true,  
   },
-  "include": ["src/**/*"],
-  "exclude": ["__tests__/**/*", "__mocks__/**/*"]
+  "include": [
+    "src/**/*",
+    "@types" 
+  ]
 }
