Revert "chore: removes unnecessary .js file extension from imports"
This reverts commit 6534bfe0acfe9760014ed857e2e2b7f599bd4773.

--- a/tsconfig.commonjs.json
+++ b/tsconfig.commonjs.json
@@ -1,19 +1,21 @@
 {
   "compilerOptions": {
-    "target": "ES6", 
-    "module": "CommonJS", 
-    "resolveJsonModule": true,
-    "sourceMap": true, 
-    "outDir": "./commonjs", 
-    "strict": true, 
-    "noUnusedLocals": false,
-    "moduleResolution": "node",
-    "baseUrl": "./src",
-    "esModuleInterop": true,
-    "declaration": true,  
+      "target": "ES2016", 
+      "module": "commonjs",
+      "resolveJsonModule": true,
+      "sourceMap": true,
+      "outDir": "./commonjs",
+      "strict": true,
+      "noUnusedLocals": true,
+      "moduleResolution": "node",
+      "baseUrl": "./src",                     
+      "esModuleInterop": true,
+      "typeRoots": [
+        "@types",
+        "./node_modules/@types",
+      ],
+      "declaration": true,  
   },
-  "include": [
-    "src/**/*",
-    "@types" 
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["__tests__/**/*", "__mocks__/**/*"]
 }
