--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,21 @@
 {
   "compilerOptions": {
-    "target": "ES6", 
-    "module": "ES6", 
-    "resolveJsonModule": true,
-    "sourceMap": true, 
-    "outDir": "./dist", 
-    "strict": true, 
-    "noUnusedLocals": false,
-    "moduleResolution": "node",
-    "baseUrl": "./src",
-    "esModuleInterop": true,
-    "declaration": true,  
+      "target": "ES2016", 
+      "module": "ES6",
+      "resolveJsonModule": true,
+      "sourceMap": true,
+      "outDir": "./dist",
+      "strict": true,
+      "noUnusedLocals": true,
+      "moduleResolution": "node",
+      "baseUrl": "./src",                     
+      "esModuleInterop": true,
+      "typeRoots": [
+        "@types",
+        "./node_modules/@types",
+      ],
+      "declaration": true,  
   },
-  "include": [
-    "src/**/*",
-    "@types" 
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["__tests__/**/*", "__mocks__/**/*"]
 }
