--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@byu-trg/express-user-management",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Node.js library to extend an Express.js REST API with user management functionality. The library includes:",
-  "main": "commonjs/index.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "commonjs/src/index.js",
+  "module": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc --project tsconfig.json && tsc --project tsconfig.commonjs.json && echo '{\"type\": \"commonjs\"}' > commonjs/package.json",
+    "build": "rm -rf commonjs/ && rm -rf dist/ && tsc --project tsconfig.json && tsc --project tsconfig.commonjs.json && echo '{\"type\": \"commonjs\"}' > commonjs/package.json",
     "test": "jest",
     "migrate": "node-pg-migrate -t pgmigrations_identity",
     "prepare": "npm run build",
@@ -25,23 +25,22 @@
   },
   "homepage": "https://github.com/BYU-TRG-Team/express-user-management#readme",
   "devDependencies": {
+    "@jest-mock/express": "^2.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.179",
-    "@types/node": "^17.0.21",
     "@types/nodemailer": "^6.4.4",
     "@types/nodemailer-smtp-transport": "^2.7.5",
     "@types/pg": "^8.6.4",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.10.0",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.3",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.2"
+    "jest": "^29.4.2",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
