--- a/tsconfig.commonjs.json
+++ b/tsconfig.commonjs.json
@@ -8,12 +8,48 @@
     "strict": true, 
     "noUnusedLocals": false,
     "moduleResolution": "node",
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "esModuleInterop": true,
     "declaration": true,  
+    "paths": {
+      "tests/*": [
+        "./__tests__/*"
+      ],
+      "mocks/*": [
+        "./__mocks__/*"
+      ],
+      "middleware/*": [
+        "./src/middleware/*"
+      ],
+      "types/*": [
+        "./src/types/*"
+      ],
+      "constants/*": [
+        "./src/constants/*"
+      ],
+      "controllers/*": [
+        "./src/controllers/*"
+      ],
+      "db/*": [
+        "./src/db/*"
+      ],
+      "di/*": [
+        "./src/di/*"
+      ],
+      "services/*": [
+        "./src/services/*"
+      ],
+      "support/*": [
+        "./src/support/*"
+      ],
+      "routes/*": [
+        "./src/routes/*"
+      ],
+    },
   },
   "include": [
     "src/**/*",
-    "@types" 
+    "@types",
+    "__tests__/"
   ]
 }
