--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@byu-trg/express-user-management",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Node.js library to extend an Express.js REST API with user management functionality. The library includes:",
   "main": "commonjs/src/index.js",
   "module": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "rm -rf commonjs/ && rm -rf dist/ && tsc --project tsconfig.json && tsc --project tsconfig.commonjs.json && echo '{\"type\": \"commonjs\"}' > commonjs/package.json",
+    "compile-to-commonjs": "tsc --project tsconfig.commonjs.json; resolve-tspaths --project tsconfig.commonjs.json",
+    "compile-to-es6": "tsc --project tsconfig.json; resolve-tspaths --project tsconfig.json",
+    "build": "rm -rf commonjs/ dist/; npm run compile-to-commonjs; npm run compile-to-es6; echo '{\"type\": \"commonjs\"}' > commonjs/package.json",
     "test": "jest",
     "migrate": "node-pg-migrate -t pgmigrations_identity",
     "lint": "eslint . --ext .ts",
@@ -38,6 +40,7 @@
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.10.0",
     "jest": "^29.4.2",
+    "resolve-tspaths": "^0.8.8",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
