--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@byu-trg/express-user-management",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Node.js library to extend an Express.js REST API with user management functionality. The library includes:",
   "main": "commonjs/src/index.js",
   "module": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "type": "module",
   "scripts": {
-    "compile-to-commonjs": "tsc --project tsconfig.commonjs.json; resolve-tspaths --project tsconfig.commonjs.json",
-    "compile-to-es6": "tsc --project tsconfig.json; resolve-tspaths --project tsconfig.json",
+    "compile-to-commonjs": "tsc --project tsconfig.commonjs.json; resolve-tspaths --project tsconfig.commonjs.json --out ./commonjs/src",
+    "compile-to-es6": "tsc --project tsconfig.json; resolve-tspaths --project tsconfig.json --out ./dist/src",
     "build": "rm -rf commonjs/ dist/; npm run compile-to-commonjs; npm run compile-to-es6; echo '{\"type\": \"commonjs\"}' > commonjs/package.json",
     "test": "jest",
     "migrate": "node-pg-migrate -t pgmigrations_identity",
