--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@byu-trg/express-user-management",
   "version": "1.1.4",
-  "description": "Node.js library to extend an Express.js REST API with user management functionality. The library includes:",
-  "main": "commonjs/src/index.js",
-  "module": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "description": "Library to extend an Express.js HTTP REST API with user management functionality.",
+  "main": "commonjs/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "build:commonjs": "tsc --project tsconfig.commonjs.json && resolve-tspaths --project tsconfig.commonjs.json  && echo '{\"type\": \"commonjs\"}' > commonjs/package.json",
-    "build:es6": "tsc --project tsconfig.json && resolve-tspaths --project tsconfig.json",
+    "build:commonjs": "rm -rf commonjs/ && tsc --project tsconfig.commonjs.json && resolve-tspaths --project tsconfig.commonjs.json  && echo '{\"type\": \"commonjs\"}' > commonjs/package.json",
+    "build:es6": "rm -rf dist/ && tsc --project tsconfig.json && resolve-tspaths --project tsconfig.json",
     "build:all": "npm run build:es6 && npm run build:commonjs",
     "build": "npm run build:all",
     "test": "jest --coverage",
