--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.179",
-    "@types/nodemailer": "^6.4.4",
     "@types/nodemailer-smtp-transport": "^2.7.5",
     "@types/pg": "^8.6.4",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
@@ -63,6 +62,7 @@
     "nodemailer": "^6.7.2",
     "nodemailer-smtp-transport": "^2.7.4",
     "pg": "^8.7.3",
-    "winston": "^3.6.0"
+    "winston": "^3.6.0",
+    "@types/nodemailer": "^6.4.4"
   }
 }
