--- a/tsconfig.commonjs.json
+++ b/tsconfig.commonjs.json
@@ -9,6 +9,7 @@
     "noUnusedLocals": false,
     "moduleResolution": "node",
     "baseUrl": ".",
+    "rootDir": ".",
     "esModuleInterop": true,
     "declaration": true,  
     "paths": {
