--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.4",
     "bcrypt": "^5.0.1",
+    "bottlejs": "^2.0.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
@@ -62,7 +64,6 @@
     "nodemailer": "^6.7.2",
     "nodemailer-smtp-transport": "^2.7.4",
     "pg": "^8.7.3",
-    "winston": "^3.6.0",
-    "@types/nodemailer": "^6.4.4"
+    "winston": "^3.6.0"
   }
 }
