--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.10.0",
     "jest": "^29.4.2",
+    "nodemailer-mock": "^2.0.1",
     "resolve-tspaths": "^0.8.8",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
