--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,9 @@
       "@middleware/*": [
         "./src/middleware/*"
       ],
+      "@configs/*": [
+        "./src/configs/*"
+      ],
       "@constants/*": [
         "./src/constants/*"
       ],
