--- a/.github/workflows/presubmit.yaml
+++ b/.github/workflows/presubmit.yaml
@@ -19,18 +19,6 @@ jobs:
       run: npm ci
     - name: Run build
       run: npm run build:all
-  unit-tests:
-    name: Unit Tests
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3  
-    - uses: actions/setup-node@v3
-      with:
-        node-version: '16'
-    - name: Install dependencies
-      run: npm ci
-    - name: Run tests
-      run: npm run test
   lint:
     name: Lint
     runs-on: ubuntu-latest
@@ -43,3 +31,27 @@ jobs:
       run: npm ci
     - name: Run lint
       run: npm run lint
+  run-unit-tests:
+    name: Run unit tests
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3  
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+    - name: Install dependencies
+      run: npm ci
+    - name: Run unit tests
+      run: npm run unit-tests
+  run-integration-tests:
+    name: Run integration tests
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3  
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+    - name: Install dependencies
+      run: npm ci
+    - name: Run integration tests
+      run: npm run integration-tests
