--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build:es6": "rm -rf dist/ && tsc --project tsconfig.json && resolve-tspaths --project tsconfig.json",
     "build:all": "npm run build:es6 && npm run build:commonjs",
     "build": "npm run build:all",
-    "unit-tests": "bin/run_unit_tests",
-    "integration-tests": "bin/run_integration_tests",
+    "unit-tests": "test-runners/run_unit_tests",
+    "integration-tests": "test-runners/run_integration_tests",
     "migrate": "node-pg-migrate -t pgmigrations_identity",
     "lint": "eslint src tests --ext .ts",
     "lint:fix": "eslint src tests --ext .ts --fix",
