refactor: create standalone db client file for readability

--- a/jest.config.json
+++ b/jest.config.json
@@ -19,13 +19,13 @@
     "^@$": "<rootDir>/src",
     "^@config-manager$": "<rootDir>/src/config-manager",
     "^@smtp-client$": "<rootDir>/src/smtp-client",
+    "^@db-client$": "<rootDir>/src/db-client",
     "^@typings$": "<rootDir>/src/types",
     "^@typings/(.*)$": "<rootDir>/src/types/$1",
     "^@middleware/(.*)$": "<rootDir>/src/middleware/$1",
     "^@configs/(.*)$": "<rootDir>/src/configs/$1",
     "^@constants/(.*)$": "<rootDir>/src/constants/$1",
     "^@controllers/(.*)$": "<rootDir>/src/controllers/$1",
-    "^@db$": "<rootDir>/src/db",
     "^@db/(.*)$": "<rootDir>/src/db/$1",
     "^@bottle$": "<rootDir>/src/bottle",
     "^@helpers/(.*)$": "<rootDir>/src/helpers/$1",
