--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
       "@smtp-client": [
         "./src/smtp-client"
       ],
+      "@db-client": [
+        "./src/db-client"
+      ],
       "@typings": [
         "./src/types"
       ],
@@ -42,9 +45,6 @@
       ],
       "@controllers/*": [
         "./src/controllers/*"
-      ],
-      "@db": [
-        "./src/db"
       ],
       "@db/*": [
         "./src/db/*"
