--- a/jest.config.json
+++ b/jest.config.json
@@ -24,6 +24,7 @@
     "^@typings/(.*)$": "<rootDir>/src/types/$1",
     "^@middleware/(.*)$": "<rootDir>/src/middleware/$1",
     "^@configs/(.*)$": "<rootDir>/src/configs/$1",
+    "^@constants$": "<rootDir>/src/constants",
     "^@constants/(.*)$": "<rootDir>/src/constants/$1",
     "^@controllers/(.*)$": "<rootDir>/src/controllers/$1",
     "^@db/(.*)$": "<rootDir>/src/db/$1",
