--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@jest-mock/express": "^2.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/email-templates": "^10.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
@@ -43,16 +44,17 @@
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
+    "email-templates": "^11.0.5",
     "eslint": "^8.10.0",
     "husky": "^8.0.3",
     "jest": "^29.4.2",
-    "nodemailer-mock": "^2.0.1",
     "resolve-tspaths": "^0.8.8",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
   "dependencies": {
     "@types/nodemailer": "^6.4.4",
+    "app-root-path": "^3.1.0",
     "bcrypt": "^5.0.1",
     "bottlejs": "^2.0.1",
     "cookie-parser": "^1.4.6",
@@ -63,6 +65,7 @@
     "node-pg-migrate": "^6.2.1",
     "nodemailer": "^6.7.2",
     "pg": "^8.7.3",
+    "pug": "^3.0.2",
     "uuid": "^9.0.0",
     "winston": "^3.6.0"
   }
