--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "pg": "^8.7.3",
     "pug": "^3.0.2",
     "uuid": "^9.0.0",
-    "winston": "^3.6.0"
+    "winston": "^3.6.0",
+    "yup": "^1.2.0"
   }
 }
